--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,5 @@ services:
     name: neuro-ilaj-api
     env: python
     buildCommand: ""
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn app:app --host 0.0.0.0 --port 10000
+    plan: free
